# break-down-address

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
src/: __init__.py  main.py
src/geoinfo/: __init__.py  __main__.py  constants.py  pipeline.py
src/geoinfo/address/: __init__.py  parser.py  qualify.py
src/geoinfo/geo/: __init__.py  spatial.py
src/geoinfo/geocoding/: __init__.py  google_api.py
src/geoinfo/utils/: __init__.py  text.py
tests/: test_google_api.py  test_parser.py  test_pipeline.py  test_qualify.py  test_spatial.py  test_text.py
