[project]
name = "break-down-address"
version = "0.1.0"
description = "A Python package for breaking down and standardizing addresses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cn2an>=0.5.23",
    "dotenv>=0.9.9",
    "geopandas>=1.1.2",
    "googlemaps>=4.10.0",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
